svs 22.04.2013 10:51:19 +0400 - build 35

1. Уточнение возвращаемого значения при вызове из макроса

t-rex 20.04.2013 09:14:22 +0200 - build 34

1. Откат 33.

svs 19.04.2013 14:24:04 +0400 - build 33

1. Не тот GUID для меню конфигурации

svs 18.04.2013 09:55:25 +0400 - build 32

1. Для макросов (в качестве эксперимента) - параметр может быть строкой, обозначающей действие, аналогичное цифрам
     SearchFwd      -  0
     SearchBack     -  1
     SelectFwd      -  2
     SelectBack     -  3
     Config         -  4
   Например, команда
     Plugin.Call("B66C436D-E657-419C-86D3-6834B9ACF3D2","SearchFwd")
   аналогична
     Plugin.Call("B66C436D-E657-419C-86D3-6834B9ACF3D2",0)

2. Соответственно изменён Brackets.lua

svs 16.04.2013 14:06:49 +0400 - build 

1. Уточнение в хелпе

shmuel 07.02.2013 12:23:50 +0200 - build

1. Добавлен файл: Brackets.lua.
   Удалены файлы: BrackEng.lua, BrackRus.lua, Hotkey.farconfig.

zg 22.10.2012 02:11:46 +0200 - build 31

1. уточнение для Plugin.Call.

t-rex 06.10.2012 20:03:33 +0200 - build 30

1. x64 warnings.

zg 23.09.2012 17:49:23 +0200 - build 29

1. Far 3.0 API 2830

zg 16.09.2012 17:28:18 +0200 - build 28

1. Far 3.0 API 2801

zg 26.03.2012 15:16:55 +0200 - build 27

1. Far 3.0 API 2572

svs 01.03.2012 10:33:52 +0400 - build 26

1. не пашет callplugin("B66C436D-E657-419C-86D3-6834B9ACF3D2"), если не указан параметр
   будем выводить меню.

2. Добавлена пара "кавычек": „” и «»

zg 15.02.2012 05:00:51 +0200 - build 25

1. Far 3 API 2460.

zg 14.02.2012 04:30:36 +0200 - build 24

1. Far 3 API 2458.

t-rex 21.12.2011 22:10:11 +0200

1. reg -> xml

svs 16.09.2011 14:46:48 +0400 - build 23

1. callplugin. Добавлена поддержка
   Плагин при вызове через callplugin ожидает в качестве параметра только число:
     0 - поиск вперед
     1 - поиск назад
     2 - выделить вперед
     3 - выделить назад
     4 - вызвать диалог конфигурации и выйти

   Если параметр строка - плагин завершает свою работу.
