@@ -1,3 +1,9 @@
+----------------------------------------------------------------------------------------
+w17 16.12.2022 13:48:51 +0300 - build 36
+
+1. Avoid macro parameters mismatch (aka SearchFwd == search backward and vice versa)
+
+----------------------------------------------------------------------------------------
 svs 22.04.2013 10:51:19 +0400 - build 35
 
 1. Уточнение возвращаемого значения при вызове из макроса
